--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,63 @@
 button {
   position: center;
 }
+
+.card{
+  box-shadow: -6px -6px 10px -5px;
+  width: 350px;
+  text-align: center;
+  background-color: white;
+}
+
+#team-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.card img{
+  height: 150px;
+  width: 150px;
+}
+/* 
+body {
+  background-color: ghostwhite;
+  font-family: "Permanent Marker", cursive;
+}
+​ #navbar {
+  text-align: center;
+  margin: 30px 0;
+}
+​ #hero-display {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-areas: "hero-con ul";
+  justify-items: center;
+}
+​ #hero-form {
+  text-align: center;
+  margin-bottom: 50px;
+}
+​ #heroesContainer {
+  grid-area: hero-con;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 60px;
+}
+
+​ .description {
+  padding: 0 10px;
+}
+​ #title {
+  font-size: 50px;
+  margin: 40px 0 10px;
+}
+​ #hero-ul {
+  grid-area: ul;
+}
+​ button {
+  font-family: "Permanent Marker", cursive;
+}
+​ img {
+  width: 150px;
+  height: 225px;
+} */
