--- a/src/App.css
+++ b/src/App.css
@@ -26,18 +26,21 @@ body{
 }
 
 .NavBar a{
-  margin-top: 9px;
+  margin-top: 6px;
   color:white;
   text-decoration: none;
   text-align: center;
-  font-size: 18px;
+  font-size: 21px;
+  top: 50%;
+  
 }
 
 #youtube-header{
   width: 100px;
-  font-size: 20px;
-  margin-top: 6px;
+  font-size: 25px;
+  margin-top: 3px;
   color:white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .HomePage {
@@ -59,7 +62,7 @@ button {
   padding-right: 80px;
 
   box-shadow: -6px -6px 10px -5px;
-  width: 800px;
+  max-width: 800px;
   text-align: center;
   background-color: ghostwhite;
   margin: 0 auto;
