--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@ body{
   background-color: lightgray;
 }
 
-#description-header {
+#descriptionHeader {
   margin: 10px;
   background-color: ghostwhite;
 }
 
-.NavBar {
+.navBar {
   border: 10px red solid;
   background-color: red;
   height: 35px;
@@ -21,7 +21,7 @@ body{
   grid-template-columns: 100px 100px 100px;
 }
 
-.NavBar a{
+.navBar a{
   margin-top: 6px;
   color:white;
   text-decoration: none;
@@ -31,7 +31,7 @@ body{
   
 }
 
-#youtube-header{
+#youtubeHeader{
   width: 100px;
   font-size: 25px;
   margin-top: 3px;
@@ -39,9 +39,6 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.HomePage {
-  background-color: wheat;
-}
 
 #videosContainer {
   background-color: wheat;
@@ -51,7 +48,7 @@ button {
   position: center;
 }
 
-#description-header {
+#descriptionHeader {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 80px;
@@ -81,12 +78,12 @@ button {
   text-align: left;
 }
 
-#team-container{
+#teamContainer{
   display: grid;
   grid-template-rows: repeat(3, 1fr);
 }
 
-.card-pic{
+.cardPic{
   height: 150px;
 }
 
@@ -95,27 +92,27 @@ button {
   width: 150px;
 }
 
-.social-links img{
+.socialLinks img{
   height: 50px;
 }
 
-.links-container{
+.linksContainer{
   padding-left: 270px;
   width: 90px;
   display: inline-block;
 }
 
-#search-bar{
+#searchBar{
   text-align: center;
   height: 50px;
 }
 
-#search-bar input{
+#searchBar input{
   width: 45%;
   height: 30px;
 }
 
-#search-button{
+#searchButton{
    height: 35px;
    color: white;
    background-color: red;
@@ -123,31 +120,31 @@ button {
    width:150px;
 }
 
-.search-results-link{
+.searchResultsLink{
   text-decoration: none;
   color:black;
   font-size: 20px;
 }
 
-.search-results-container{
+.searchResultsContainer{
   display:grid;
   grid-template-columns: 1fr 1fr;
   margin: 0 auto;
   width:1200px;
 }
 
-.search-child{
+.searchChild{
   padding: 60px;
   text-align: center;
   width:450px;
 }
 
-.search-child:hover{
+.searchChild:hover{
   background-color: lightsteelblue;
   transition: 0.5s;
 }
 
-.search-results-thumbnail-div{
+.searchResultsThumbnailDiv{
   text-align: center;
   padding-bottom: 20px;
 }
